# Prova_progetto_finale

Documentazione/: documentazione_uml.txt
FacsimileProject/: CMakeLists.txt
FacsimileProject/src/: CMakeLists.txt
FacsimileProject/src_test/: CMakeLists.txt
